@@ -64,6 +64,9 @@
 # define SQLDATETIME	SYBDATETIME
 # define SQLDATETIM4	SYBDATETIME4
 # define SQLDATETIMN	SYBDATETIMN
+# ifdef SYBMSDATETIME2
+# define SQLMSDATETIME2  SYBMSDATETIME2
+# endif
 # define SQLMONEY		SYBMONEY
 # define SQLMONEY4		SYBMONEY4
 # define SQLMONEYN		SYBMONEYN
