@@ -84,6 +84,7 @@ PHP                                                                        NEWS
   . Fixed bug #74243 (allow locales.conf to drive datetime format). (fandrieu)
   . Expose TDS version as \PDO::DBLIB_ATTR_TDS_VERSION attribute on \PDO
     instance. (fandrieu)
+  . Treat DATETIME2 columns like DATETIME. (fandrieu)
 
 - PDO_OCI:
   . Fixed bug #74631 (PDO_PCO with PHP-FPM: OCI environment initialized
